--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -71,6 +71,18 @@
                                 <div class="panel-body">
                                     <h4>
                                         Chenyang Xu <br><small class="text-muted">Plenary Lecture PL2</small></h4>
+                                    <a data-toggle="collapse" href="#chenyangXu" aria-expanded="false" aria-controls="chenyangXu">
+                                        <strong>Moduli space of higher dimensional varieties</strong>
+                                    </a>
+                                    <div class="collapse" id="chenyangXu">
+                                        <div class="well text-left">
+                                            The space parametrising objects is called moduli space. In algebraic geometry,
+                                            to construct moduli spaces for appropriate objects and to study their geometry
+                                            is a central topic. In this talk, we will discuss the recent progress on the
+                                            construction of moduli spaces for higher dimensional varieties, and its relations
+                                            to topics like minimal model program, Kahler-Einstein metric etc.
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
@@ -184,12 +196,63 @@
                                 <div class="panel-heading"><strong>09:00-10:00</strong></div>
                                 <div class="panel-body">
                                     <h4>David Brydges <br> <small class="text-muted">Plenary Lecture PL 3</small></h4>
+                                    <a data-toggle="collapse" href="#dBrydges" aria-expanded="false" aria-controls="dBrydges">
+                                        <strong>The Wilson Renormalisation Group and $O (n)$ models</strong>
+                                    </a>
+                                    <div class="collapse" id="dBrydges">
+                                        <div class="well text-left">
+                                            The 1982 Nobel Prize in Physics was awarded to Ken Wilson for \emph{
+                                            his theory for critical phenomena in connection with phase
+                                            transitions}.  His work stimulated many authors to search for a
+                                            rigorous systematic realisation of his calculus (The Renormalisation
+                                            Group).  With the same objective we will give an introduction for a
+                                            general audience to recent work of Bauerschmidt, Brydges and Slade,
+                                            and other authors, which starts with the $\varphi^{4}$ model on the
+                                            lattice $Z^{d}$ at weak coupling. This model is a variation on the
+                                            Ising model: instead of the spin $\varphi_{x}$, for every lattice site
+                                            $x \in Z^{d}$, taking values in $\{-1,1 \}$, $\varphi_{x}$ is real
+                                            valued, but concentrated near $\pm 1$ by a weight that includes
+                                            factors $\exp \big[-g (\varphi_{x}^{2}- 1)^{2} \big]$.  Weak coupling
+                                            means $g$ is positive and small. More generally we study $O (n)$
+                                            models that are defined by replacing $\varphi_{x}^{2}$ by
+                                            $\|\varphi_{x}\|^{2}$ with $\varphi \in R^{n}$.  There is also a
+                                            precise mathematical definition of the $n=0$ component model and it
+                                            turns out to be a natural model for self-repelling walk.  Our results
+                                            include a proof for $d=4$ that the susceptibility diverges with a
+                                            logarithmic correction to the mean-field behaviour with exponent $(n +
+                                            2)/(n + 8)$.
+
+                                            Recently G. Slade has extended these methods to other dimensions
+                                            $d$. He studies $O(n)$ models, including $n=0$, with a long range
+                                            ferromagnetic spin-spin interaction that decays with distance $r$ as
+                                            $r^{-(d+\alpha)}$, for $\alpha \in (0,2)$.  These models have upper
+                                            critical dimension $d_c=2\alpha$.  For dimensions $d=1,2,3$ and small
+                                            $\epsilon>0$, he sets $\alpha = \frac 12 (d+\epsilon)$, so that
+                                            $d=d_c-\epsilon$ is below the upper critical dimension $d_{c}$.  For
+                                            small $\epsilon$ and weak coupling he proves that the susceptibility
+                                            decays with exponent $\gamma = 1 + \frac{n+2}{n+8} \frac
+                                            \epsilon\alpha + O(\epsilon^2)$.  Expansion in $\epsilon$ for such
+                                            long-range models was first carried out in the physics literature in
+                                            1972, by Fisher, Ma and Nickel.
+                                        </div>
+                                </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>10:00-11:00</strong></div>
                                 <div class="panel-body">
                                     <h4>Geoff Whittle <br> <small class="text-muted">Plenary Lecture PL 4</small></h4>
+                                    <a data-toggle="collapse" href="#gWhittle" aria-expanded="false" aria-controls="gWhittle">
+                                        <strong>What is Rota's Conjecture --- and why would you care?</strong>
+                                    </a>
+                                    <div class="collapse" id="gWhittle">
+                                        <div class="well text-left">
+                                            Recently Jim Geelen, Bert Gerards and I announced that we had a proof of
+                                            Rota’s Conjecture, which concerns matroids representable over finite fields.
+                                            In this talk, rather than discuss the proof, I will attempt to give a feel
+                                            for the milieu in which the conjecture arose and to communicate some of the
+                                            reasons why, from the time I was a graduate student, I became fascinated with it.
+                                        </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
@@ -306,6 +369,17 @@
                                 <div class="panel-heading"><strong>09:00-10:00</strong></div>
                                 <div class="panel-body">
                                     <h4>Hee Oh <br><small class="text-muted"> Plenary Lecture PL 6</small></h4>
+                                    <a data-toggle="collapse" href="#hHoo" aria-expanded="false" aria-controls="hHoo">
+                                        <strong>Prime number theorems for hyperbolic manifolds and rational maps</strong>
+                                    </a>
+                                    <div class="collapse" id="hHoo">
+                                        <div class="well text-left">
+                                            The prime number theorem states that the number of primes of size at most
+                                            T grows like T/log T. Geometric analogues of this profound fact have been of
+                                            great interest over the years. In my lecture, I will discuss refined versions
+                                            of the prime number theorem for hyperbolic 3-manifolds and for hyperbolic rational maps.
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
@@ -373,6 +447,31 @@
                                 <div class="panel-heading"><strong>09:00-10:00</strong></div>
                                 <div class="panel-body">
                                     <h4>Ana Amador <br><small class="text-muted"> Plenary Lecture PL 9</small></h4>
+                                    <a data-toggle="collapse" href="#aAmador" aria-expanded="false" aria-controls="aAmador">
+                                        <strong>Birdsong to study neural control in a learned sensorimotor task</strong>
+                                    </a>
+                                    <div class="collapse" id="aAmador">
+                                        <div class="well text-left">
+                                            Birdsong is a complex motor activity that emerges from the interaction between
+                                            the peripheral system (PS), the central nervous system (CNS) and the environment.
+                                            The similarities to human speech, both in production and learning, have positioned
+                                            songbirds as unique animal models for studying this learned motor skill. In this
+                                            talk I will present a low dimensional dynamical system as a model of the avian
+                                            vocal apparatus. Inputs can be related to physiological variables, being the
+                                            output a synthetic song (SYN) that is a copy of the recorded birdsong (BOS).
+                                            To go beyond sound comparison, we measured neural activity highly tuned to BOS
+                                            and found that the patterns of neural response to BOS and SYN were remarkable
+                                            similar. This work allowed to relate motor gestures and neural activity, making
+                                            specific predictions on the timing of the neural activity. To study the dynamical
+                                            emergence of these features, we developed a neural model in which the variables
+                                            were the average activities of different neural populations within the nuclei of
+                                            the song system. This model can reproduce the measured respiratory patterns and the
+                                            timing of the neural activity. In this talk, I will present experimental data in
+                                            accordance with the dynamical model. This interdisciplinary work shows how low
+                                            dimensional models for the PS and CNS can be a valuable tool for studying the
+                                            neuroscience of generation and control of complex motor tasks.
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
