--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -235,6 +235,7 @@
                                             long-range models was first carried out in the physics literature in
                                             1972, by Fisher, Ma and Nickel.
                                         </div>
+                                    </div>
                                 </div>
                                 </div>
                             </div>
@@ -253,6 +254,7 @@
                                             for the milieu in which the conjecture arose and to communicate some of the
                                             reasons why, from the time I was a graduate student, I became fascinated with it.
                                         </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
