- More DIVs fixed

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -233,10 +233,9 @@
                                             decays with exponent $\gamma = 1 + \frac{n+2}{n+8} \frac
                                             \epsilon\alpha + O(\epsilon^2)$.  Expansion in $\epsilon$ for such
                                             long-range models was first carried out in the physics literature in
-                                            1972, by Fisher, Ma and Nickel.
+                                            {#1972, by Fisher, Ma and Nickel.#}
                                         </div>
                                     </div>
-                                </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
