- Manuel del Pino abstract

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -260,6 +260,22 @@
                                 <div class="panel-heading"><strong>11:00-12:00</strong></div>
                                 <div class="panel-body">
                                     <h4>Manuel del Pino <br><small class="text-muted">Plenary Lecture PL 5</small></h4>
+                                    <a data-toggle="collapse" href="#mPino" aria-expanded="false" aria-controls="mPino">
+                                        <strong>Singularity formation and bubbling in nonlinear diffusions</strong>
+                                    </a>
+                                    <div class="collapse" id="mPino">
+                                        <div class="well text-left">
+                                            A fundamental question in nonlinear evolution equations is the analysis of
+                                            solutions which develop singularities (blow-up) in finite time or as time
+                                            goes to infinity. We review recent results on the construction of solutions
+                                            to certain notable nonlinear parabolic PDE which exhibit this kind of
+                                            behavior in the form of "bubbling". This means solutions that at main order
+                                            look like asymptotically singular time-dependent scalings of a fixed finite
+                                            energy entire steady state. We carry out this analysis for the classical
+                                            two-dimensional harmonic map flow into the sphere and the energy-critical
+                                            semilinear heat equation.
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
