- Resumenes Mariel Vazquez

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -376,6 +376,20 @@
                                 <div class="panel-heading"><strong>20:00-21:00</strong></div>
                                 <div class="panel-body">
                                     <h4>Mariel Vazquez <br> Public Lecture</h4>
+                                    <a data-toggle="collapse" href="#mVazquezPL" aria-expanded="false" aria-controls="mVazquezPL">
+                                        <strong>Conectando y reconectando: un enlace entre las matemáticas, la física y el ADN</strong>
+                                    </a>
+                                    <div class="collapse" id="mVazquezPL">
+                                        <div class="well text-left">
+                                             ¿Qué tienen en común los aros de humo y las molecular circulares de ADN?
+                                            Los dos están sujetos a procesos de reconección local, que son communes tanto
+                                            en biología como en física. En biología, rearreglos cromosómicos surgen a
+                                            raíz de errores en la replicación del ADN, como daños ocasionados por
+                                            radiación, y caracterizan a ciertas celulas cancerígenas. En esta plática
+                                            mostramos como se aplican herramientas de topología, simulaciones y
+                                            visualización computacional para analizar datos de reconección.
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -495,6 +509,24 @@
                                 <div class="panel-heading"><strong>10:00-11:00</strong></div>
                                 <div class="panel-body">
                                     <h4>Hiraku Nakajima <br><small class="text-muted"> Plenary Lecture PL 10</small></h4>
+                                    <a data-toggle="collapse" href="#hNakajima" aria-expanded="false" aria-controls="hNakajima">
+                                        <strong>Quiver gauge theories and Kac-Moody Lie algebras</strong>
+                                    </a>
+                                    <div class="collapse" id="hNakajima">
+                                        <div class="well text-left">
+                                           Quiver gauge theories give two types of algebraic symplectic
+                                            varieties, which are called quiver varieties and Coulomb branches
+                                            respectively. The first ones were introduced by the speaker in 1994, and
+                                            their homology groups are representations of Kac-Moody Lie algebras. The
+                                            second ones were introduced by the speaker and Braverman, Finkelberg in
+                                            2016. Two types of varieties are very different (e.g., dimensions are
+                                            different), but expected to be related in rather mysterious ways. As an
+                                            example of mysterious links, I would like to explain a conjectural
+                                            realization of Kac-Moody Lie algebras representations on homology groups of
+                                            Coulomb branches. It nicely matches with geometric Satake correspondence
+                                            for usual finite dimensional complex simple groups and loop groups.
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
@@ -597,9 +629,6 @@
                                     <h4>PRIMA Assembly</h4>
                                 </div>
                             </div>
-
-
-
                         </div>
                         <div role="tabpanel" class="tab-pane" id="friday">
                             {# Friday content #}
@@ -607,6 +636,32 @@
                                 <div class="panel-heading"><strong>09:00-10:00</strong></div>
                                 <div class="panel-body">
                                     <h4>Mariel Vazquez <br> <small class="text-muted">Plenary Lecture PL 12 </small></h4>
+                                    <a data-toggle="collapse" href="#mVazquez" aria-expanded="false" aria-controls="mVazquez">
+                                        <strong>Pathways of Unlinking by Local Reconnection</strong>
+                                    </a>
+                                    <div class="collapse" id="mVazquez">
+                                        <div class="well text-left">
+                                            Reconnection processes appear at widely different scales, from microscopic
+                                            DNA recombination to large-scale reconnection of vortices in fluid
+                                            turbulence. Motivated by biological data, in this talk I illustrate how our
+                                            group uses tools from knot theory and low-dimensional topology, combined
+                                            with computer simulations and visualization methods to characterize the
+                                            process of topology simplification by local reconnection. Replication of
+                                            circular DNA yields 2-component links of type T(2,2n). Unlinking the DNA
+                                            circles is essential to cell survival. We provide mathematical proof that
+                                            there is a unique minimal pathway of DNA unlinking by local reconnection
+                                            assuming that at every step the topological complexity goes down. We also
+                                            investigate, both analytically and numerically, whether there are other
+                                            minimal pathways of unlinking replication links by local reconnection when
+                                            we relax the complexity assumption. We introduce a Monte Carlo method to
+                                            simulate local reconnection, provide a quantitative measure to distinguish
+                                            among pathways and conclude that the unique unlinking pathway found under
+                                            the strict assumption remains the most probable after the assumption is
+                                            lifted. These results point to a universal property relevant to any local
+                                            reconnection event between two sites along one or two circles, such as the
+                                            reconnection of knotted fluid vortices.
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
