- Resumen Lexing Ying

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -533,6 +533,20 @@
                                 <div class="panel-heading"><strong>11:00-12:00</strong></div>
                                 <div class="panel-body">
                                     <h4> Lexing Ying <br>  <small class="text-muted"> Plenary Lecture PL 11</small></h4>
+                                    <a data-toggle="collapse" href="#lYing" aria-expanded="false" aria-controls="lYing">
+                                        <strong>Preconditioning high frequency wave equations</strong>
+                                    </a>
+                                    <div class="collapse" id="lYing">
+                                        <div class="well text-left">
+                                            High frequency wave propagation has been a longstanding challenge in
+                                            scientific computing. For the time-harmonic problems, the linear systems
+                                            resulting from PDE and/or integral formulations are difficult to solve for
+                                            standard iterative methods since they are highly indefinite. In this talk,
+                                            we consider several such cases that arise from applications. For each one,
+                                            we construct a sparsifying preconditioner that results in small numbers of
+                                            iterations when combined with a standard iterative solver.
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
