- Cancelar Mathematical Ecology

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -576,7 +576,8 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Mathematical Ecology and Epidemiology</h4>
+                                                <h4><del>Mathematical Ecology and Epidemiology</del></h4>
+                                                <strong>CANCELED</strong>
                                                 {#Room 5#}
                                             </div>
                                         </div>
@@ -730,7 +731,8 @@
                                         </div>
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4>Mathematical Ecology and Epidemiology</h4>
+                                                <h4><del>Mathematical Ecology and Epidemiology</del></h4>
+                                                <strong>CANCELED</strong>
                                                 {#Room 5#}
                                             </div>
                                         </div>
@@ -851,9 +853,9 @@
                     </div>
                     </br>
 
-                    <div class="special-session-a"><strong>Mathematical Ecology and Epidemiology</strong><br>
-                        <small>Jorge Velasco (IM-Juriquilla) Michael Li (U. Alberta) Hisahi Inaba (U. Tokyo) Ying-Hen (China Med. University)</small> <br>
-                        <small>jx.velasco<i class="fa fa-at" aria-hidden="true"></i>im.unam.mx</small><br>
+                    <div class="special-session-a"><strong><del>Mathematical Ecology and Epidemiology</del></strong> - CANCELED<br>
+                        {#<small>Jorge Velasco (IM-Juriquilla) Michael Li (U. Alberta) Hisahi Inaba (U. Tokyo) Ying-Hen (China Med. University)</small> <br>#}
+                        {#<small>jx.velasco<i class="fa fa-at" aria-hidden="true"></i>im.unam.mx</small><br>#}
                     </div>
                     </br>
 
