Public Lecture Urrutia Fucugauchi

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -63,14 +63,14 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>10:15-11:15</strong></div>
                                 <div class="panel-body">
-                                    <h4>Maryam Mirzakhani <br> <small class="text-muted">Plenary Lecture PL 1</small></h4>
+                                    <h4>Jaime Urrutia Fucugauchi<br> <small class="text-muted">Public Lecture</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>11:15-12:15</strong></div>
                                 <div class="panel-body">
                                     <h4>
-                                        Chenyang Xu <br><small class="text-muted">Plenary Lecture PL2</small></h4>
+                                        Chenyang Xu <br><small class="text-muted">Plenary Lecture PL 1</small></h4>
                                     <a data-toggle="collapse" href="#chenyangXu" aria-expanded="false" aria-controls="chenyangXu">
                                         <strong>Moduli space of higher dimensional varieties</strong>
                                     </a>
@@ -195,7 +195,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>09:00-10:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>David Brydges <br> <small class="text-muted">Plenary Lecture PL 3</small></h4>
+                                    <h4>David Brydges <br> <small class="text-muted">Plenary Lecture PL 2</small></h4>
                                     <a data-toggle="collapse" href="#dBrydges" aria-expanded="false" aria-controls="dBrydges">
                                         <strong>The Wilson Renormalisation Group and $O (n)$ models</strong>
                                     </a>
@@ -241,7 +241,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>10:00-11:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Geoff Whittle <br> <small class="text-muted">Plenary Lecture PL 4</small></h4>
+                                    <h4>Geoff Whittle <br> <small class="text-muted">Plenary Lecture PL 3</small></h4>
                                     <a data-toggle="collapse" href="#gWhittle" aria-expanded="false" aria-controls="gWhittle">
                                         <strong>What is Rota's Conjecture --- and why would you care?</strong>
                                     </a>
@@ -259,7 +259,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>11:00-12:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Manuel del Pino <br><small class="text-muted">Plenary Lecture PL 5</small></h4>
+                                    <h4>Manuel del Pino <br><small class="text-muted">Plenary Lecture PL 4</small></h4>
                                     <a data-toggle="collapse" href="#mPino" aria-expanded="false" aria-controls="mPino">
                                         <strong>Singularity formation and bubbling in nonlinear diffusions</strong>
                                     </a>
@@ -399,7 +399,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>09:00-10:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Hee Oh <br><small class="text-muted"> Plenary Lecture PL 6</small></h4>
+                                    <h4>Hee Oh <br><small class="text-muted"> Plenary Lecture PL 5</small></h4>
                                     <a data-toggle="collapse" href="#hHoo" aria-expanded="false" aria-controls="hHoo">
                                         <strong>Prime number theorems for hyperbolic manifolds and rational maps</strong>
                                     </a>
@@ -416,7 +416,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>10:00-11:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>William Duke <br><small class="text-muted"> Plenary Lecture PL 7</small></h4>
+                                    <h4>William Duke <br><small class="text-muted"> Plenary Lecture PL 6</small></h4>
                                     <a data-toggle="collapse" href="#wDuke" aria-expanded="false" aria-controls="wDuke">
                                         <strong>The geometry of real quadratic fields</strong>
                                     </a>
@@ -437,7 +437,7 @@
                                 <div class="panel-heading"><strong>11:00-12:00</strong></div>
                                 <div class="panel-body">
                                     <h4>Fernando Codá Marques <br>
-                                        <small class="text-muted"> Plenary Lecture PL 8</small></h4>
+                                        <small class="text-muted"> Plenary Lecture PL 7</small></h4>
                                     <a data-toggle="collapse" href="#fernandoCoda" aria-expanded="false" aria-controls="fernandoCoda">
                                         <strong>Minimal hypersurfaces and a Weyl law for the volume spectrum</strong>
                                     </a>
@@ -477,7 +477,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>09:00-10:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Ana Amador <br><small class="text-muted"> Plenary Lecture PL 9</small></h4>
+                                    <h4>Ana Amador <br><small class="text-muted"> Plenary Lecture PL 8</small></h4>
                                     <a data-toggle="collapse" href="#aAmador" aria-expanded="false" aria-controls="aAmador">
                                         <strong>Birdsong to study neural control in a learned sensorimotor task</strong>
                                     </a>
@@ -508,7 +508,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>10:00-11:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Hiraku Nakajima <br><small class="text-muted"> Plenary Lecture PL 10</small></h4>
+                                    <h4>Hiraku Nakajima <br><small class="text-muted"> Plenary Lecture PL 9</small></h4>
                                     <a data-toggle="collapse" href="#hNakajima" aria-expanded="false" aria-controls="hNakajima">
                                         <strong>Quiver gauge theories and Kac-Moody Lie algebras</strong>
                                     </a>
@@ -532,7 +532,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>11:00-12:00</strong></div>
                                 <div class="panel-body">
-                                    <h4> Lexing Ying <br>  <small class="text-muted"> Plenary Lecture PL 11</small></h4>
+                                    <h4> Lexing Ying <br>  <small class="text-muted"> Plenary Lecture PL 10</small></h4>
                                     <a data-toggle="collapse" href="#lYing" aria-expanded="false" aria-controls="lYing">
                                         <strong>Preconditioning high frequency wave equations</strong>
                                     </a>
@@ -650,7 +650,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>09:00-10:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Mariel Vazquez <br> <small class="text-muted">Plenary Lecture PL 12 </small></h4>
+                                    <h4>Mariel Vazquez <br> <small class="text-muted">Plenary Lecture PL 11 </small></h4>
                                     <a data-toggle="collapse" href="#mVazquez" aria-expanded="false" aria-controls="mVazquez">
                                         <strong>Pathways of Unlinking by Local Reconnection</strong>
                                     </a>
@@ -683,13 +683,13 @@
                                 <div class="panel-heading"><strong>10:00-11:00</strong></div>
                                 <div class="panel-body">
                                     <h4>Alexey Bondal
-                                        <br><small class="text-muted">Plenary Lecture PL 13</small></h4>
+                                        <br><small class="text-muted">Plenary Lecture PL 12</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>11:00-12:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Ian Agol <br><small class="text-muted">Plenary Lecture PL 14</small></h4>
+                                    <h4>Ian Agol <br><small class="text-muted">Plenary Lecture PL 13</small></h4>
                                     <a data-toggle="collapse" href="#ianAgol" aria-expanded="false" aria-controls="ianAgol">
                                         <strong>Coloring problems for maps on surfaces</strong>
                                     </a>
